<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/profile" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/navigation_settings"
        android:icon="@drawable/baseline_app_settings_alt_24"
        android:title="@string/settings" />
</menu>