<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/login_background">

    <!-- Logo Eklenen Kısım -->
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/su_ayak_izi" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/kullanici_girisi"
        android:textSize="24sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/eposta_adresi">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:hint="@string/sifre"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:text="@string/sifre_unutma"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:gravity="end"
        android:backgroundTint="@color/white"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/giris_yap"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@drawable/gradient_login_button"
        />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/kayit_ol"
        android:textSize="15sp"
        android:textColor="@color/material_on_surface_emphasis_high_type"
        android:backgroundTint="@color/white"
        />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#F30E0E"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        />

</LinearLayout>