<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/personal_header"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/profile_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profil Ayarları"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            />

        <ImageView
            android:id="@+id/profileHolder"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/female_avatar" />

        <TextView
            android:id="@+id/userNameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="place_holder_name"
            android:textSize="20sp"
            android:layout_toRightOf="@+id/profileHolder"
            android:layout_below="@+id/profile_setting"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/userEmailProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="place_holder_email"
            android:textSize="14sp"
            android:layout_toRightOf="@+id/profileHolder"
            android:layout_below="@+id/userNameProfile"
            android:layout_marginStart="10dp"/>

    </RelativeLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/personal_header"
    android:layout_above="@+id/bottomNavigationViewProfile">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/yeni_isim">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/yeni_soy_isim">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastnameUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:id="@+id/updateFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kadın"
                android:textSize="18sp"
            />
            <RadioButton
                android:id="@+id/updateMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/erkek"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
            />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_button"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/gradient_login_button"
        />
    </LinearLayout>

</ScrollView>
    <!-- BottomNavigationView at the bottom-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationViewProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"/>
</RelativeLayout>